syntax = "proto3";

package aperture.policy.sync.v1;

import "aperture/policy/language/v1/flowcontrol.proto";
import "aperture/policy/sync/v1/common_attributes.proto";
import "aperture/policy/sync/v1/tick.proto";

message LoadSchedulerWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Load Scheduler
  policy.language.v1.LoadScheduler load_scheduler = 2;
}

message LoadDecisionWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Load Decision
  LoadDecision load_decision = 2;
}

message LoadDecision {
  TickInfo tick_info = 1;
  double load_multiplier = 2;
  bool pass_through = 3;
  map<string, uint64> tokens_by_workload_index = 4;
}
